1. Collection API Улучшения[#155579]