@@ -12,43 +12,43 @@ import static org.junit.Assert.assertThat;
 public class DepartmentsTest {
     @Test
     public void whenMissed() {
-        List<String> input = Arrays.asList("K1/SK1");
-        List<String> expect = Arrays.asList("K1", "K1/SK1");
+        List<String> input = List.of("K1/SK1");
+        List<String> expect = List.of("K1", "K1/SK1");
         List<String> result = Departments.fillGaps(input);
         assertThat(result, is(expect));
     }
 
     @Test
     public void whenNonChance() {
-        List<String> input = Arrays.asList("K1", "K1/SK1");
-        List<String> expect = Arrays.asList("K1", "K1/SK1");
+        List<String> input = List.of("K1", "K1/SK1");
+        List<String> expect = List.of("K1", "K1/SK1");
         List<String> result = Departments.fillGaps(input);
         assertThat(result, is(expect));
     }
 
     @Test
     public void whenTwoDepart() {
-        List<String> input = Arrays.asList("K1/SK1/SSK1", "K2/SK1/SSK1");
-        List<String> expect = Arrays.asList("K1", "K1/SK1", "K1/SK1/SSK1", "K2", "K2/SK1", "K2/SK1/SSK1");
+        List<String> input = List.of("K1/SK1/SSK1", "K2/SK1/SSK1");
+        List<String> expect = List.of("K1", "K1/SK1", "K1/SK1/SSK1", "K2", "K2/SK1", "K2/SK1/SSK1");
         List<String> result = Departments.fillGaps(input);
         assertThat(result, is(expect));
     }
 
     @Test
     public void whenTwoDepartReverse() {
-        List<String> input = Arrays.asList("K1/SK1/SSK1", "K2/SK1/SSK1");
+        List<String> input = List.of("K1/SK1/SSK1", "K2/SK1/SSK1");
         List<String> result = Departments.fillGaps(input);
         Departments.sortDesc(result);
-        List<String> expect = Arrays.asList("K2", "K2/SK1", "K2/SK1/SSK1", "K1", "K1/SK1", "K1/SK1/SSK1");
+        List<String> expect = List.of("K2", "K2/SK1", "K2/SK1/SSK1", "K1", "K1/SK1", "K1/SK1/SSK1");
         assertThat(result, is(expect));
     }
 
     @Test
     public void whenSortReverse() {
-        List<String> input = Arrays.asList("K2/SK1", "K2");
+        List<String> input = List.of("K2/SK1", "K2");
         List<String> result = Departments.fillGaps(input);
         Departments.sortDesc(result);
-        List<String> expect = Arrays.asList("K2", "K2/SK1");
+        List<String> expect = List.of("K2", "K2/SK1");
         assertThat(result, is(expect));
     }
 }
