@@ -7,6 +7,7 @@ import ru.job4j.oop.collection.NotifyAccount;
 import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
+import java.util.Set;
 
 import static org.hamcrest.core.Is.is;
 import static org.junit.Assert.*;
@@ -15,12 +16,12 @@ public class NotifyAccountTest {
 
     @Test
     public void sent() {
-        List<Account> accounts = Arrays.asList(
+        List<Account> accounts = List.of(
                 new Account("412", "Kolobok Kolobkov", "asf213sa"),
                 new Account("451", "Lisa Patrikevna", "0000012")
         );
         HashSet<Account> expect = new HashSet<>(
-                Arrays.asList(
+                Set.of(
                         new Account("412", "Kolobok Kolobkov", "asf213sa"),
                         new Account("451", "Lisa Patrikevna", "0000012")
                 )
@@ -30,7 +31,7 @@ public class NotifyAccountTest {
 
     @Test
     public void deleteDuplicate() {
-        List<Account> accounts = Arrays.asList(
+        List<Account> accounts = List.of(
                 new Account("412", "Kolobok Kolobkov", "asf213sa"),
                 new Account("412", "Kolobok Kolobkov", "asf213sa"),
                 new Account("451", "Lisa Patrikevna", "0000012"),
